--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.poster.PosterActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_posters"
