--- a/app/src/main/res/layout/item_poster.xml
+++ b/app/src/main/res/layout/item_poster.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
-        android:id="@+id/item_poster"
+        android:id="@+id/image_view_poster"
         android:contentDescription="@string/poster_content_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
