--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,7 +26,7 @@
             android:text="@string/title_filter_2020"/>
 
         <Switch
-            android:id="@+id/switch_only_2020"
+            android:id="@+id/switchOnly2020"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"/>
